--- a/index.html
+++ b/index.html
@@ -644,6 +644,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Notícia Forense</a></h3>
+										<span><b>News Website</b></span>
 										<span>
 											- HTML 5<br>
 											- CSS 3<br>
@@ -659,12 +660,29 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/img-6.jpg);">
+								<div class="desc">
+									<div class="con">
+										<h3><a href="work.html">Gamer Dan</a></h3>
+										<span>Web Design</span>
+										<span>
+											- HTML 5<br>
+											- CSS 3<br>
+											- Javacript<br>
+											- PHP<br>
+											- Wordpress<br>
+										</span>
+									</div>
+								</div>
+							</div>
+						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
 							<div class="project" style="background-image: url(images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Economia Solidária</a></h3>
-										<span><b>Android App</b></span>
+										<span><b>Hybrid App</b></span>
 										<span>
 											- HTML 5<br>
 											- CSS 3<br>
@@ -679,21 +697,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
-						<!-- <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-6.jpg);">
-								<div class="desc">
-									<div class="con">
-										<h3><a href="work.html">Work 06</a></h3>
-										<span>Web Design</span>
-										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
-										</p>
-									</div>
-								</div>
-							</div>
-						</div> -->
+						
 					</div>
 					<!-- <div class="row">
 						<div class="col-md-12 animate-box">
